--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -39,3 +39,7 @@ jobs:
     - name: Run unit tests
       run: make unit
       id: unit
+
+    - uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: Add generated files
